--- a/index.html
+++ b/index.html
@@ -15,10 +15,69 @@
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="stylesheet" href="./css/fontello.css">
+
+    <link rel="stylesheet" href="./css/main.css" />
+
     <title>Evonomix test</title>
 </head>
 
 <body>
+    <header>
+        <!-- navigation start -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-white">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/logo.png" class="logo" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+
+                <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav text-dark">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">acasa</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                destinatii interne
+                            </a>
+                            <div class="dropdown-menu bg-cl-light" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">submenu item 1</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">submenu item ipsumm</a>
+                                <div class="dropdown-divider"></div>
+
+                                <a class="dropdown-item" href="#">submenu item lorem</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">destinatii externe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">oferte speciale</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">bilete avion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- navigation end -->
+    </header>
+    <main></main>
+    <footer></footer>
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
