--- a/index.html
+++ b/index.html
@@ -75,6 +75,27 @@
             </div>
         </nav>
         <!-- navigation end -->
+        <!-- carousel start -->
+        <div class="carousel">
+            <div class="carousel_social-icons">
+                <a href="#">
+                    <i class="icon-facebook"></i>
+                </a>
+                <a href="#">
+                    <i class="icon-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="icon-youtube"></i>
+                </a>
+                <a href="#">
+                    <i class="icon-gplus"></i>
+                </a>
+            </div>
+            <div id="owl-carousel" class="owl-carousel owl-theme">
+            </div>
+
+        </div>
+        <!-- carousel end -->
     </header>
     <main></main>
     <footer></footer>
@@ -92,7 +113,8 @@
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
 
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/carousel.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
