feat: offers section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,45 @@
         </div>
         <!-- carousel end -->
     </header>
-    <main></main>
+    <main>
+        <!-- offers section start -->
+        <section class="offers bg-custom-primary text-white">
+            <!-- mountain svg start -->
+            <svg id="offers_mountain-icon" xmlns="http://www.w3.org/2000/svg" width="650.188" height="213.125"
+                viewBox="0 0 650.188 213.125">
+                <defs>
+                    <style>
+                        .cls-1 {
+                            fill: #fff;
+                            fill-rule: evenodd;
+                        }
+                    </style>
+                </defs>
+                <path class="cls-1"
+                    d="M810.3,983.452l58.1-64.971,20.969,37.1,35.253-53.146,40.84-37.369,22.108,35.172,3.414,4.578,38.905-42.632,16.18,28.285,27.85-41.543,30.61-32.058,28.1,39.357,37.57,6.541,13.81-28.953,54.84,27,22.45-37.544,32.08,33.048,56.22,57.912,24.68,16.723,8.6,18.823,40.18-13.4,29.29,34.692,8.15,15.646s-66.11,44.4-69.06,43.287S810.3,983.452,810.3,983.452Z"
+                    transform="translate(-810.312 -816.875)" />
+            </svg>
+            <!-- mountain svg end -->
+            <div class="offers_container container d-flex flex-column justify-content-start text-center pt-4">
+
+                <i class="icon-globe"></i>
+                <h1 class="text-uppercase">start tour vacation right now!</h1>
+                <p>For the spontaneous (or procrastinating) traveler, we are serving up the hottest deals on
+                    last-minute
+                    vacations.
+                    Skip town this weekend with last minute travel deals.</p>
+
+            </div>
+            <a href="#" class="btn btn-custom-secondary d-block m-auto"><i class="icon-star"></i>vezi
+                <span>ofertele</span></a>
+        </section>
+        <!-- offers section end -->
+
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
     <footer></footer>
 
     <!-- Jquery -->
