--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
             </svg>
             <!-- mountain svg end -->
             <div class="offers_container container d-flex flex-column justify-content-start text-center pt-4">
-
                 <i class="icon-globe"></i>
-                <h1 class="text-uppercase">start tour vacation right now!</h1>
+                <h1 class="text-uppercase">start tour vacation <span>right now!</span></h1>
                 <p>For the spontaneous (or procrastinating) traveler, we are serving up the hottest deals on
                     last-minute
                     vacations.
@@ -130,9 +129,27 @@
                 <span>ofertele</span></a>
         </section>
         <!-- offers section end -->
+        <!-- make offer section start -->
+        <section class="make-offer bg-white text-custom-secondary">
+            <div class="container d-flex flex-column justify-content-start text-center p-4">
+                <i class="make-offer_gear-icon icon-cog"></i>
+                <h1 class="mb-5">vrem sa-ti facem <span>o oferta</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla
+                    pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </section>
+        <!-- make offer section end -->
 
-        <section></section>
-        <section></section>
         <section></section>
         <section></section>
     </main>
