--- a/index.html
+++ b/index.html
@@ -150,10 +150,49 @@
         </section>
         <!-- make offer section end -->
 
+        <!-- packages section end -->
+        <section class="packages text-white">
+            <div class="overlay"></div>
+            <div class="container packages_container d-flex flex-column justify-content-center text-center">
+                <h1>pachete <span>exclusive</span></h1>
+                <p>Pellentesque tincidunt id nisl non molestie. Cum sociis natoque penatibus et magnis dis parturient
+                    montes, nascetur
+                    ridiculus mus.</p>
+                <div class="packages_play">
+
+                    <i class="icon-play-circled2" data-toggle="modal" data-target="#videoModal"></i>
+
+                    <h1>vezi <span>clipul</span></h1>
+                </div>
+
+            </div>
+        </section>
+        <!-- packages section end -->
+
         <section></section>
         <section></section>
     </main>
     <footer></footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <iframe id="promo-video" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
@@ -168,8 +207,9 @@
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
 
-    <script type="module" src="./js/carousel.js"></script>
-    <script type="module" src="./js/main.js"></script>
+    <script src="./js/carousel.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
