feat: articles section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,64 @@
         </section>
         <!-- packages section end -->
 
-        <section></section>
+        <section class="articles p-5">
+
+            <div class="container d-flex flex-column text-center">
+                <div class="articles_header mb-5">
+                    <i class="icon-paper-plane"></i>
+                    <h1>noutati & <span>articole</span></h1>
+                </div>
+                <div class="row mb-5 mt-5">
+                    <article class="col d-flex ml-5">
+                        <img src="./img/article-image.png" alt="people in vacation">
+                        <div class="articles_content">
+                            <h2>lorem ipsum dolor</h2>
+                            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna,
+                                lorem ipsum dolor est sit amet.</p>
+                            <a href="#" class="text-custom-primary">citeste mai mult >></a>
+                        </div>
+                    </article>
+                    <article class="col d-flex">
+                        <img src="./img/article-image.png" alt="people in vacation">
+                        <div class="articles_content">
+                            <h2>lorem ipsum dolor</h2>
+                            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna,
+                                lorem ipsum dolor est sit amet.</p>
+                            <a href="#" class="text-custom-primary">citeste mai mult >></a>
+                        </div>
+                    </article>
+                </div>
+                <div class="dropdown-divider mb-5"></div>
+                <div class="row mb-5">
+                    <article class="col d-flex ml-5">
+                        <img src="./img/article-image.png" alt="people in vacation">
+                        <div class="articles_content">
+                            <h2>lorem ipsum dolor</h2>
+                            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna,
+                                lorem ipsum dolor est sit amet.</p>
+                            <a href="#" class="text-custom-primary">citeste mai mult >></a>
+                        </div>
+                    </article>
+                    <article class="col d-flex">
+                        <img src="./img/article-image.png" alt="people in vacation">
+                        <div class="articles_content">
+                            <h2>lorem ipsum dolor</h2>
+                            <p>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna,
+                                lorem ipsum dolor est sit amet.</p>
+                            <a href="#" class="text-custom-primary">citeste mai mult >></a>
+                        </div>
+                    </article>
+                </div>
+
+                <a href="#" class="btn btn-custom-secondary text-white m-auto">vezi toate noutatile</a>
+            </div>
+
+
+        </section>
         <section></section>
     </main>
     <footer></footer>
