refactor: media query

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
                             <input type="email" id="email" name="email" placeholder="turism intern" required>
                         </div>
                     </div>
-                    <a href="#" type="submit" class="btn btn-custom-primary text-white">creaza
-                        <span>alerta</span></a>
+                    <button type="submit" class="btn btn-custom-primary text-white">creaza
+                        <span>alerta</span>
                 </form>
             </div>
 
@@ -297,7 +297,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Pachetul exclusiv</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -327,7 +327,7 @@
 
     <script src="./js/carousel.js"></script>
     <script src="./js/modal.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/form.js"></script>
 </body>
 
 </html>
