docs: addes redme

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                 <i class="icon-mail"></i>
                 <div class="newsletter_header m-xl-5">
                     <h1>alerta <span>de vacanta</span></h1>
-                    <br>
-                    Pellentesque tincidunt id nisl non molestie.</br>
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    <p>
+                        Pellentesque tincidunt id nisl non molestie.<br>
+                        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                     </p>
                 </div>
                 <form class="newsletter_form m-xl-5">
@@ -263,6 +263,7 @@
                     </div>
                     <button type="submit" class="btn btn-custom-primary text-white">creaza
                         <span>alerta</span>
+                    </button>
                 </form>
             </div>
 
@@ -303,7 +304,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <iframe id="promo-video" title="YouTube video player" frameborder="0"
+                    <iframe id="promo-video" title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
